--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8sp"
+    android:layout_margin="8dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -23,8 +23,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginEnd="0sp"
-                android:layout_marginStart="8sp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginStart="8dp"
                 android:visibility="gone">
 
                 <ImageView
@@ -84,7 +84,7 @@
                 android:id="@+id/ivSynced"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8sp"
+                android:layout_marginEnd="8dp"
                 android:src="@drawable/ic_done_all"
                 android:visibility="gone" />
 
@@ -111,8 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
