white text for buttons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="give">#FFFF6105</color>
 
     <color name="moneroOrange">#cc5100</color>
-    <color name="moneroWhite">#e2e2e2</color>
+    <color name="moneroWhite">#ffffff</color>
     <color name="moneroBlack">#000000</color>
     <color name="moneroGray">#FD9B9B9B</color>
 
