tweak credit dialog

--- a/app/src/main/res/values/about.xml
+++ b/app/src/main/res/values/about.xml
@@ -14,10 +14,10 @@
     <string name="donation_credits"><![CDATA[
         <b>Credits</b>
         <br/>
-        m2049r, baltsar777, rehrar, anhdres,
-        keejef, TheMonera, EarlOfEgo
+        m2049r, baltsar777, anhdres, keejef,
+        rehrar, EarlOfEgo et al.
         <br/><br/>
-        <a href="www.monerujo.io">www.monerujo.io</a>
+        <a href="https://monerujo.io/">monerujo.io</a>
         ]]></string>
 
     <string name="privacy_policy"><![CDATA[
