--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -49,15 +49,31 @@
                 android:text="@string/send_qr_hint" />
         </LinearLayout>
 
-        <com.m2049r.xmrwallet.layout.ExchangeView
-            android:id="@+id/evAmount"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="0dp"
-            android:orientation="vertical"
-            android:paddingEnd="56dp"
-            android:paddingStart="56dp" />
+            android:orientation="horizontal"
+            android:weightSum="12">
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <com.m2049r.xmrwallet.layout.ExchangeView
+                android:id="@+id/evAmount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="0dp"
+                android:layout_weight="10"
+                android:orientation="vertical" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
