Added okhttp to the license string

--- a/app/src/main/res/values/about.xml
+++ b/app/src/main/res/values/about.xml
@@ -90,6 +90,9 @@
         </ul>
         Copyright (c) The Android Open Source Project
 
+        <h3>OkHttp</h3>
+        Copyright (c) 2014 Square, Inc.
+
         <h3>com.google.zxing:core</h3>
         Copyright (c) 2012 ZXing authors
 
