added timber to licenses list

--- a/app/src/main/res/values/about.xml
+++ b/app/src/main/res/values/about.xml
@@ -93,6 +93,9 @@
         <h3>OkHttp</h3>
         Copyright (c) 2014 Square, Inc.
 
+        <h3>Timber</h3>
+        Copyright (c) 2013 Jake Wharton
+
         <h3>com.google.zxing:core</h3>
         Copyright (c) 2012 ZXing authors
 
